# debug-tutorial

./: .env.dist  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tutorial_talk_notes.rtf
.github/workflows/: test.yml
docs/: lab1.md  lab2.md  project_overview.md
newsletter/config/: asgi.py  settings.py  urls.py  wsgi.py
project/config/: asgi.py  settings.py  urls.py  wsgi.py
project/data/: apps.py  author.py  category.py  dates.py  factories.py  markdown.py  subscribers.py  subscription_notifications.py
project/data/management/commands/: fake_data.py
project/newsletter/: admin.py  apps.py  forms.py  models.py  operations.py  receivers.py  syndication.py  test.py  test_admin.py  test_forms.py  test_models.py  test_operations.py  test_receivers.py  test_syndication.py  test_templatetags.py  test_views.py  urls.py  views.py
project/newsletter/migrations/: 0001_initial.py  0002_remove_post_is_draft_post_is_published_and_more.py  0003_post_is_public_post_summary.py  0004_alter_subscription_options_and_more.py  0005_auto_20220809_0012.py  0006_alter_category_options_alter_subscription_categories.py  0007_alter_subscriptionnotification_options_and_more.py  0008_alter_post_categories.py  0009_post_open_graph_description_post_open_graph_image.py  0010_subscriptionnotification_read.py  0011_alter_category_slug.py  0011_alter_post_options_remove_category_category_unq_slug_and_more.py  0012_alter_category_created_alter_post_created_and_more.py
project/newsletter/templatetags/: newsletter_utils.py
project/templates/: base.html  landing.html
project/templates/inclusion_tags/: nice_datetime.html
project/templates/posts/: detail.html  list.html
project/templates/registration/: activation_complete.html  activation_complete_admin_pending.html  admin_approve_complete_email_subject.txt  logout.html  password_change_done.html  password_reset_complete.html  registration_complete.html  registration_form.html
project/templates/staff/: analytics.html  post_form.html
project/templates/subscription/: update.html
project/tests/: runner.py  test_lab1_1.py  test_lab1_2.py  test_lab1_3.py  test_lab2_1.py  test_lab2_2.py  test_lab2_3.py  test_lab2_4.py
static/fomantic/: fomantic-ui-2.8.8.semantic.min.css  fomantic-ui-2.8.8.semantic.min.js
templates/: 403.html  404.html  500.html  base.html
templates/posts/: detail.html  list.html
templates/registration/: activate.html  admin_approve.html  admin_approve_complete.html  login.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  registration_closed.html  resend_activation_complete.html  resend_activation_form.html
(+5 files in other folders)
