[metadata]
name = Newsletter
version = 1.0.0
description = An example Newsletter application used for a debugging tutorial..
author = Tim Schilling
author_email = schillingt@better-simple.com
url = https://github.com/tim-schilling/newsletter

[coverage.html]
skip_covered = True
skip_empty = True

[coverage:run]
branch = True
parallel = True
source = newsletter

[coverage:paths]
source = src

[coverage:report]
fail_under = 100
show_missing = True

[flake8]
extend-ignore = E203, E501

[isort]
combine_as_imports = true
profile = black
