[metadata]
name = Newsletter
version = 1.0.0
description = An example Newsletter application used for a debugging tutorial..
author = Tim Schilling
author_email = schillingt@better-simple.com
url = https://github.com/tim-schilling/newsletter

[coverage.html]
skip_covered = True
skip_empty = True

[coverage:run]
branch = True
parallel = True
source = project
omit =
   manage.py
   project/config/asgi.py
   project/config/wsgi.py
   project/data/*
plugins = django_coverage_plugin

[coverage:django_coverage_plugin]
template_extensions = html, txt

[coverage:paths]
source = project

[coverage:report]
show_missing = True

[flake8]
extend-ignore = E203, E501

[isort]
combine_as_imports = true
profile = black
